--- a/trailhead/force-app/main/default/lwc/myFirstWebComponent/myFirstWebComponent.html
+++ b/trailhead/force-app/main/default/lwc/myFirstWebComponent/myFirstWebComponent.html
@@ -2,9 +2,7 @@
   <lightning-card title="ContactInformation" icon-name="custom:custom14">
     <div class="slds-m-around_medium">
       <template for:each={contacts} for:item="contact">
-        <div key={contact.Id}>
-          {contact.Name}, {contact.Title}
-        </div>
+        <div key={contact.Id}>{contact.Name}, {contact.Title}</div>
       </template>
     </div>
   </lightning-card>
