--- a/trailhead/force-app/main/default/lwc/augmentor/augmentor.html
+++ b/trailhead/force-app/main/default/lwc/augmentor/augmentor.html
@@ -11,6 +11,12 @@
           onchange={handleStartChange}
         >
         </lightning-input>
+        <lightning-button
+          class="slds-var-p-vertical_xx-small"
+          label="Add 1m to Counter"
+          onclick={handleMaximizeCounter}
+        >
+        </lightning-button>
       </lightning-layout-item>
     </lightning-layout>
     <c-numerator
