--- a/trailhead/force-app/main/default/lwc/wireAdapterDemo/wireAdapterDemo.html
+++ b/trailhead/force-app/main/default/lwc/wireAdapterDemo/wireAdapterDemo.html
@@ -1,16 +1,21 @@
 <template>
   <lightning-card title="Wire Adpater Demo">
-    <div class="slds-grid slds-m-around_medium">
-      <div class="slds-col slds-size_2-of-3">
-        <lightning-formatted-text value={name} class="slds-text-heading_medium">
-        </lightning-formatted-text>
+    <template if:true={record.data}>
+      <div class="slds-grid slds-m-around_medium">
+        <div class="slds-col slds-size_2-of-3">
+          <lightning-formatted-text
+            value={name}
+            class="slds-text-heading_medium"
+          >
+          </lightning-formatted-text>
+        </div>
+        <div class="slds-col slds-size_1-of-3">
+          <lightning-formatted-text
+            value={phone}
+            class="slds-text-heading_medium"
+          ></lightning-formatted-text>
+        </div>
       </div>
-      <div class="slds-col slds-size_1-of-3">
-        <lightning-formatted-text
-          value={phone}
-          class="slds-text-heading_medium"
-        ></lightning-formatted-text>
-      </div>
-    </div>
+    </template>
   </lightning-card>
 </template>
