--- a/trailhead/force-app/main/default/lwc/wireApexDemo/wireApexDemo.html
+++ b/trailhead/force-app/main/default/lwc/wireApexDemo/wireApexDemo.html
@@ -1,8 +1,11 @@
 <template>
   <lightning-card title="Related Contacts" icon-name="custom:custom14">
     <ul class="slds-var-m-around_medium">
-      <template for:each={contacts.data} for:item="contact">
-        <li key={contact.Id}>{contact.FirstName} - {contact.LastName}</li>
+      <template if:true={error}>Error!!!</template>
+      <template if:false={error}>
+        <template for:each={contacts} for:item="contact">
+          <li key={contact.Id}>{contact.FirstName} - {contact.LastName}</li>
+        </template>
       </template>
     </ul>
   </lightning-card>
