--- a/trailhead/force-app/main/default/lwc/dataBinding/dataBinding.html
+++ b/trailhead/force-app/main/default/lwc/dataBinding/dataBinding.html
@@ -1,12 +1,13 @@
 <template>
-  <lightning-card title="Fetch Data Using Property">
-    <p class="slds-var-m-around_medium">Hello, {greeting}!</p>
-    <lightning-input
-      class="slds-var-m-around_medium"
-      label="Name"
-      value={greeting}
-      onchange={handleChange}
-    >
-    </lightning-input>
+  <lightning-card title="Fetch Data Using Getters">
+    <div class="slds-var-m-around_medium">
+      <lightning-input name="fname" label="First Name" onchange={handleChange}>
+      </lightning-input>
+      <lightning-input name="lname" label="Last Name" onchange={handleChange}>
+      </lightning-input>
+      <p class="slds-var-m-top_medium">
+        Uppercased Full Name: {uppercasedFullName}
+      </p>
+    </div>
   </lightning-card>
 </template>
