--- a/trailhead/force-app/main/default/lwc/dataBinding/dataBinding.html
+++ b/trailhead/force-app/main/default/lwc/dataBinding/dataBinding.html
@@ -1,8 +1,19 @@
 <template>
-  <lightning-card title="Fetch Data Using querySelector">
+  <lightning-card title="Fetch Data Using querySelectorAll">
     <div class="slds-var-m-around_medium">
-      <p>Hello, {greeting}!</p>
-      <lightning-input label="Name" value={greeting}> </lightning-input>
+      <p>Hello, {firstName} {lastName}!</p>
+      <lightning-input
+        name="fname"
+        label="First Name"
+        value={firstName}
+      ></lightning-input>
+      <br />
+      <lightning-input
+        name="lname"
+        label="Last Name"
+        value={lastName}
+      ></lightning-input>
+      <br />
       <lightning-button
         label="Click Me"
         onclick={handleClick}
