--- a/trailhead/force-app/main/default/lwc/parent/parent.html
+++ b/trailhead/force-app/main/default/lwc/parent/parent.html
@@ -1,10 +1,10 @@
 <template>
-  <lightning-card title="Getter and Setter To Modify Data">
+  <lightning-card title="Message Passing Between Components">
     <div class="slds-var-p-top_large">
-      <c-child class="slds-text-heading_medium" item-name="Sanjay"></c-child>
+      <c-child class="slds-text-heading_medium"></c-child>
     </div>
     <div class="slds-var-p-top_large">
-      <c-child class="slds-text-heading_medium" item-name="Gupta"></c-child>
+      <c-child class="slds-text-heading_medium"></c-child>
     </div>
   </lightning-card>
 </template>
