--- a/trailhead/force-app/main/default/lwc/parent/parent.html
+++ b/trailhead/force-app/main/default/lwc/parent/parent.html
@@ -1,10 +1,13 @@
 <template>
   <lightning-card title="Message Passing Between Components">
     <div class="slds-var-p-top_large">
-      <c-child class="slds-text-heading_medium"></c-child>
+      <c-child class="slds-text-heading_medium" first-name="Vikas"></c-child>
     </div>
     <div class="slds-var-p-top_large">
-      <c-child class="slds-text-heading_medium"></c-child>
+      <c-child class="slds-text-heading_medium" first-name="Aarush"></c-child>
+    </div>
+    <div class="slds-var-p-top_large">
+      <c-child class="slds-text-heading_medium" first-name="Atharv"></c-child>
     </div>
   </lightning-card>
 </template>
